src/objects/PSE_Health_Safety_Issue_Report__c.object
<CustomObject>
    <fields>
        <fullName>PSE_Assigned_To_Me__c</fullName>
        <formula>$User.Id =  PSE_Assigned_To__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSE_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Health_Safety_Issue_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSE_Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Electrocution hazard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ergonomic issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing cover panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toxic material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tripping hazard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsecured objects</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSE_Detailed_Description__c</fullName>
        <inlineHelpText>Describe the details of the health or safety issue you have found</inlineHelpText>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PSE_ImageDisplay__c</fullName>
        <formula>IF( ISBLANK(PSE_ImageId__c),
    &quot;No image&quot;,
    IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; PSE_ImageId__c, PSE_ImageId__c, 100, 100)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ImageDisplay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSE_ImageId__c</fullName>
        <label>ImageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSE_Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>London Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Munich Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paris Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rome Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington DC Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edinburgh Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melborne Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSE_Report_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSE_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSE_Subject__c</fullName>
        <defaultValue>&quot;Issue spotted on &quot; &amp; TEXT(TODAY()) &amp; &quot; by &quot; &amp; $User.FirstName</defaultValue>
        <inlineHelpText>Enter a short description of what your health/safety issue report is about</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Health/Safety Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSE_Report_Date__c</columns>
        <columns>PSE_Subject__c</columns>
        <columns>PSE_Location__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>PSE_Status__c</columns>
        <columns>PSE_Detailed_Description__c</columns>
        <columns>PSE_Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_open_issues</fullName>
        <columns>PSE_Status__c</columns>
        <columns>PSE_ImageDisplay__c</columns>
        <columns>PSE_Location__c</columns>
        <columns>PSE_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSE_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All open issues</label>
    </listViews>
    <listViews>
        <fullName>PSE_My_assigned_open_issues</fullName>
        <columns>PSE_Subject__c</columns>
        <columns>PSE_ImageDisplay__c</columns>
        <columns>PSE_Location__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSE_Assigned_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PSE_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My assigned open issues</label>
    </listViews>
    <listViews>
        <fullName>PSE_My_submitted_issues</fullName>
        <columns>PSE_Subject__c</columns>
        <columns>PSE_Location__c</columns>
        <columns>PSE_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My submitted issues</label>
    </listViews>
    <nameField>
        <displayFormat>SafetyIssue-{00000}</displayFormat>
        <label>Health/Safety Issue Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health/Safety Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>